# MBZIRC_pub

./: AlignWall_server.py  README.md
challenge_coordinator/: CMakeLists.txt  package.xml
challenge_coordinator/launch/: challenge2_launch.launch
challenge_coordinator/rviz_config/: mbzirc.rviz
challenge_coordinator/src/: Challenge_smach.py
challenge_coordinator/srv/: CommandMisc.srv
gps_goal/: CMakeLists.txt  package.xml
gps_goal/launch/: gps_goal.launch  gps_launch.launch  initialize_origin.launch
gps_goal/src/: gps_goal.py  gps_goals_action_client.py  gps_goals_action_server.py
gps_goal/waypoints/: points_outdoor.txt
gps_goal_msgs/: CMakeLists.txt  package.xml
gps_goal_msgs/action/: ExecuteWaypoints.action  ExecuteWaypointsGPS.action
husky_control/config/: localization.yaml
husky_control/launch/: control.launch  teleop.launch
husky_customization/husky_custom_description/launch/: axis.launch  custom_description.launch  um7.launch
husky_customization/husky_custom_description/meshes/: ulee03_arch.dae
husky_customization/husky_custom_description/urdf/: custom_description.urdf.xacro
husky_customization/husky_custom_gazebo/urdf/: custom_description.gazebo.xacro
husky_gazebo/launch/: husky_MBZIRC.launch
husky_gazebo/worlds/: Arena.world
move/: CMakeLists.txt  package.xml
move/launch/: chase_wall.launch
move/src/: AlignWall_client.py  AlignWall_server.py  ChaseWall_client.py  ChaseWall_server.py  move_base_action_client.cpp  odom_nav_action_client.cpp  odom_nav_action_server.cpp
move_msgs/: CMakeLists.txt  package.xml
move_msgs/srv/: FindWall.srv
my_ground_plane/: model.sdf
teleop_custom/: CMakeLists.txt  package.xml
teleop_custom/launch/: teleop_custom.launch
teleop_custom/src/: teleop_custom.py
vision/: CMakeLists.txt  package.xml
vision/launch/: wall_angle.launch  wall_corner.launch
vision/src/: deque_test.py  image_publisher.cpp  wall_angle_publisher.py  wall_corner_location_publisher.py
vision_msgs/: CMakeLists.txt  package.xml
