<?xml version="1.0"?>
<package format="2">
  <name>challenge_coordinator</name>
  <version>0.0.0</version>
  <description>The challenge2_dependancies package</description>

  <maintainer email="el15w2w@leeds.ac.uk">wesley</maintainer>


  <license>Unlicense</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>move_msgs</build_depend>
  <build_depend>gps_goal_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <build_export_depend>move_msgs</build_export_depend>
  <build_export_depend>gps_goal_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>move_msgs</exec_depend>
  <exec_depend>gps_goal_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
