cmake_minimum_required(VERSION 2.8.3)
project(move_msgs)

## Compile as C++11, supported in ROS Kinetic and newer
# add_compile_options(-std=c++11)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  geometry_msgs
  roscpp
  rospy
  sensor_msgs
  std_msgs
  message_generation
)

add_service_files(DIRECTORY srv
        FILES
        FindWall.srv
        AlignWall.srv
        )

generate_messages(DEPENDENCIES std_msgs sensor_msgs)


catkin_package(CATKIN_DEPENDS sensor_msgs std_msgs rospy)


include_directories(
        # include
        ${catkin_INCLUDE_DIRS}
)
